--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.21.1",
     "dayjs": "^1.10.8",
     "highcharts": "^9.3.3",
     "litepie-datepicker": "^1.0.14",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
-    "mkcert": "^1.5.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "postcss": "^7",
